k8s/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "spring-aot-demo"
  labels:
    app: "spring-aot-demo"
spec:
  type: "ClusterIP"
  ports:
  - port: 8080
    targetPort: 8080
    protocol: "TCP"
    name: "http"
  selector:
    app: "spring-aot-demo"
