k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-aot-demo
  labels:
    app: spring-aot-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: spring-aot-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-aot-demo
            port:
              number: 8080
